feat: api crud categories & blogs

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "SecretKey": "your_secret_key_here"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=42.96.1.14;Database=Vegetarian;User Id=sa;Password=SvYnd0YDni428N8vUQYC;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  }
 }
