feat: upload file api

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,12 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=42.96.1.14;Database=Vegetarian;User Id=sa;Password=SvYnd0YDni428N8vUQYC;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+  "Minio": {
+    "Endpoint": "42.96.1.14",
+    "AccessKey": "T3uHtuHWwj4XMcGXMUO9",
+    "SecretKey": "YHSjqOelnib7AeFXDkPBCH206NDYqeXrPtqLxNay",
+    "Bucket": "vegetarian",
+    "Region": "us-east-1"
   }
 }
