--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -6,7 +6,7 @@
     }
   },
   "Minio": {
-    "Endpoint": "127.0.0.1",
+    "Endpoint": "minio",
     "AccessKey": "T3uHtuHWwj4XMcGXMUO9",
     "SecretKey": "YHSjqOelnib7AeFXDkPBCH206NDYqeXrPtqLxNay",
     "Bucket": "vegetarian",
